--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,7 @@
 
 
 html {
+    box-sizing: border-box;
     font-size: 62.5%; /*Reset para REMS -62.5% = 10px de 16px */
 }
 
@@ -11,6 +12,9 @@ body {
 }
 
 /* GLOBALES */ 
+img {
+    max-width: 100%;
+}
 .contenedor {
     max-width: 120rem; /* =1200px*/
     margin: 0 auto;
@@ -46,7 +50,36 @@ h4{
     text-align: center;
 }
 
+.d-block {
+    display: block!important;
+}
+
+/* BOTONES */
+.boton {
+    color: #ffffff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.8rem;
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    display: inline-block;
+    text-align: center;
+    /* padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem; */ 
+}
+.boton-amarillo{
+    background-color: #E08709;
+}
+.boton-verde{
+    background-color: #71B100;
+}
 /* HEADER */
+.site-header {
+    background-color: #333333;
+    padding: 1rem 0 3rem 0;
+}
 
 .site-header.inicio {
     background-image: url(../img/header.jpg);
@@ -85,9 +118,10 @@ h4{
     margin-right: 2rem; /* = 20px */
 }
 .navegacion a:hover {
-    color: #71B100
+    color: #71B100;
 }
-.navegacion a: :last-of-type {
+
+.navegacion a:last-of-type {
     margin: 0;
 }
 
@@ -104,4 +138,189 @@ h4{
 
 .icono h3 {
     text-transform: uppercase;
+}
+
+/*ANUNCIOS*/
+
+.contenedor-anuncios {
+    display: flex;
+    justify-content: space-between;
+}
+
+.anuncio {
+    flex-basis: calc(33.3% - 1rem);
+    /* border-style: solid;
+    border-color: #B5B5B5;
+    border-width: 1 px; */
+    border: 1px solid #B5B5B5;
+    background-color: #F5F5F5;
+}
+
+.contenido-anuncio {
+    /* padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem; */
+    padding: 2rem;
+}
+
+.contenido-anuncio h3, 
+.contenido-anuncio p {
+    margin: 0;
+}
+
+.precio {
+    color: #71B100;
+    font-weight: 700;
+}
+
+.iconos-caracteristicas {
+    list-style: none;
+    padding: 0;
+    display: flex;    
+    justify-content: space-evenly;
+}
+
+.iconos-caracteristicas li {
+    /* flex: 1; */
+    display: flex;
+}
+
+.iconos-caracteristicas li img {
+    margin-right: 2rem;
+}
+
+.ver-todas {
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* CONTACTO HOME */
+
+.imagen-contacto {
+    background-image: url(../img/encuentra.jpg);
+    background-position: center center;
+    background-size: cover;
+    height: 40rem;
+    display: flex;
+    align-items: center;    
+}
+
+.contenido-contacto {
+    flex: 1;
+    color: #ffffff;    
+}
+.contenido-contacto p {
+    font-size: 1.8rem;
+ }
+
+/* SECCION INFERIOR */
+ .seccion-inferior {
+     display: flex;
+     justify-content: space-between;
+ }
+
+ .seccion-inferior .blog {
+     flex-basis: 60%;
+ }
+
+ .seccion-inferior .testimoniales {
+     flex-basis: calc(40% - 2rem);
+ }
+
+ .entrada-blog {
+     display: flex;
+     justify-content: space-between;
+     margin-bottom: 2rem;
+ }
+ .entrada-blog:last-of-type {
+     margin-bottom: 0;
+ }
+ .entrada-blog .imagen {
+     flex-basis: 40%;
+
+ }
+
+ .entrada-blog .texto-entrada {
+     flex-basis: calc(60% - 3rem);
+ }
+
+ .texto-entrada a {
+     color: #000000;
+     text-decoration: none;
+ }
+ .texto-entrada h4 {
+     margin: 0;
+     line-height: 1.2;
+ }
+ .texto-entrada h4::after {
+     content: '';
+     display: block;
+     width: 15rem;
+     height: .5rem;
+     background-color: #71B100;
+     margin-top: 1rem;
+ }
+
+ .texto-entrada span {
+     color: #E08709;
+ } 
+
+ /* TESTIMONIALES */
+ .testimonial {
+     background-color: #71B100;
+     font-size: 2.4rem;
+     padding: 2rem;
+     color: #ffffff;
+     border-radius: 2rem;    
+}
+
+.testimonial p {
+    text-align: right;
+}
+
+.testimonial blockquote::before {
+    content: '';
+    background-image: url(../img/comilla.svg);
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    left: -2rem;
+}
+
+.testimonial blockquote {
+    position: relative;
+    padding-left: 5rem;
+    font-weight: 300;
+}
+
+/* FOOTER */
+.site-footer {
+    background-color: #333333; 
+}
+
+.contenedor-footer {
+    padding: 3rem 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.copyright {
+    margin: 0;
+    color: #ffffff;
+}
+
+/* INTERNAS */
+
+.contenido-nosotros {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+}
+
+.texto-nosotros blockquote{
+    font-weight: 900;
+    font-size: 2rem;
+    margin: 0;
+    padding: .5rem 0 .5rem 0;
 }
