--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,6 +54,9 @@ h4{
     display: block!important;
 }
 
+.contenido-centrado {
+    max-width: 800px;
+}
 /* BOTONES */
 .boton {
     color: #ffffff;
@@ -64,10 +67,14 @@ h4{
     margin-top: 3rem;
     display: inline-block;
     text-align: center;
+    border: none;
     /* padding-top: 1rem;
     padding-bottom: 1rem;
     padding-left: 3rem;
     padding-right: 3rem; */ 
+}
+.boton:hover {
+    cursor: pointer;
 }
 .boton-amarillo{
     background-color: #E08709;
@@ -145,15 +152,20 @@ h4{
 .contenedor-anuncios {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .anuncio {
-    flex-basis: calc(33.3% - 1rem);
+    flex: 0 0 calc(33.3% - 1rem);
+    /* flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: calc(33.3% - 1rem); */
     /* border-style: solid;
     border-color: #B5B5B5;
     border-width: 1 px; */
     border: 1px solid #B5B5B5;
     background-color: #F5F5F5;
+    margin-bottom: 2rem;
 }
 
 .contenido-anuncio {
@@ -175,10 +187,12 @@ h4{
 }
 
 .iconos-caracteristicas {
+    flex: 1;
     list-style: none;
     padding: 0;
     display: flex;    
     justify-content: space-evenly;
+    max-width: 500px;
 }
 
 .iconos-caracteristicas li {
@@ -311,7 +325,7 @@ h4{
 }
 
 /* INTERNAS */
-
+/* Nosotros */
 .contenido-nosotros {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -323,4 +337,56 @@ h4{
     font-size: 2rem;
     margin: 0;
     padding: .5rem 0 .5rem 0;
+}
+/* Anuncio */
+.resumen-propiedad {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* CONTACTO */
+form p {
+    font-size: 1.5rem;
+    color: #4f4f4f;
+}
+legend {
+    font-size: 2.4rem;
+    color: #4f4f4f;
+    margin: 2rem 0 0 0;
+}
+label {
+    display: block;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+input:not([type="submit"]), 
+textarea, 
+select {
+    padding: 1rem;
+    display: block;
+    width: 97%;
+    background-color: #e1e1e1;
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 1rem;
+}
+input[type="radio"]{
+    width: auto;
+    margin: 0;
+}
+select {
+    -webkit-appearance: none;
+    appearance: none;
+}
+textarea {
+    height: 20rem;
+}
+
+.forma-contacto {
+    max-width: 30rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
