--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,9 +16,9 @@ img {
     max-width: 100%;
 }
 .contenedor {
+    width: 95%;
     max-width: 120rem; /* =1200px*/
     margin: 0 auto;
-    padding: 0;
 }
 
 h1 {
@@ -68,10 +68,18 @@ h4{
     display: inline-block;
     text-align: center;
     border: none;
+    display: block;
+    flex: 0 0 100%;
     /* padding-top: 1rem;
     padding-bottom: 1rem;
     padding-left: 3rem;
     padding-right: 3rem; */ 
+}
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+        flex: 0 0 auto;
+    }
 }
 .boton:hover {
     cursor: pointer;
@@ -101,6 +109,12 @@ h4{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .contenido-header {
+        text-align: left;
+    }
 }
 
 .contenido-header h1 {
@@ -110,10 +124,14 @@ h4{
     line-height: 2;
 }
 .barra {
+    padding-top: 3rem; /* = 30px*/
+}
+@media (min-width: 768px) {
+    .barra {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 3rem; /* = 30px*/
+    }
 }
 
 /* NAVEGACION */
@@ -121,26 +139,39 @@ h4{
 .navegacion a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 1.8rem; /* = 18px */
+    font-size: 2.2rem; 
     margin-right: 2rem; /* = 20px */
+    display: block;
+}
+@media (min-width: 768px) {
+    .navegacion a {
+        display: inline-block;
+        margin-right: 2rem; /* = 18px */
+        font-size: 1.8rem;
+    }
+    .navegacion a:last-of-type {
+        margin: 0;
+    }
 }
 .navegacion a:hover {
     color: #71B100;
 }
 
-.navegacion a:last-of-type {
-    margin: 0;
-}
-
 /*ICONOS NOSOTROS*/
-.iconos-nosotros {
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) {
+    .iconos-nosotros {
+        display: flex;
+        justify-content: space-between;
+    }    
 }
 
 .icono {
-    flex-basis: calc(33.3% - 1rem);
     text-align: center;
+}
+@media (min-width: 768px) {
+    .icono {
+        flex-basis: calc(33.3% - 1rem);
+    }
 }
 
 .icono h3 {
@@ -148,18 +179,15 @@ h4{
 }
 
 /*ANUNCIOS*/
-
-.contenedor-anuncios {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+@media (min-width: 768px) {
+    .contenedor-anuncios {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 }
 
 .anuncio {
-    flex: 0 0 calc(33.3% - 1rem);
-    /* flex-grow: 0;
-    flex-shrink: 0;
-    flex-basis: calc(33.3% - 1rem); */
     /* border-style: solid;
     border-color: #B5B5B5;
     border-width: 1 px; */
@@ -167,7 +195,14 @@ h4{
     background-color: #F5F5F5;
     margin-bottom: 2rem;
 }
-
+@media (min-width: 768px) {
+    .anuncio {
+        flex: 0 0 calc(33.3% - 1rem);
+        /* flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: calc(33.3% - 1rem); */
+    }
+}
 .contenido-anuncio {
     /* padding-top: 2rem;
     padding-left: 2rem;
@@ -205,8 +240,13 @@ h4{
 }
 
 .ver-todas {
-    display: flex;
-    justify-content: flex-end;
+    display: block;
+}
+@media (min-width: 768px) {
+    .ver-todas {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
 
 /* CONTACTO HOME */
@@ -221,7 +261,7 @@ h4{
 }
 
 .contenido-contacto {
-    flex: 1;
+    flex: 0 0 95%;
     color: #ffffff;    
 }
 .contenido-contacto p {
@@ -229,34 +269,42 @@ h4{
  }
 
 /* SECCION INFERIOR */
- .seccion-inferior {
-     display: flex;
-     justify-content: space-between;
- }
-
- .seccion-inferior .blog {
-     flex-basis: 60%;
- }
-
- .seccion-inferior .testimoniales {
-     flex-basis: calc(40% - 2rem);
- }
+@media (min-width: 768px) {
+    .seccion-inferior {
+        display: flex;
+        justify-content: space-between;
+    }
+   
+    .seccion-inferior .blog {
+        flex-basis: 60%;
+    }
+   
+    .seccion-inferior .testimoniales {
+        flex-basis: calc(40% - 2rem);
+    }
+}
 
  .entrada-blog {
-     display: flex;
-     justify-content: space-between;
      margin-bottom: 2rem;
+ }
+ @media (min-width: 768px) {
+     .entrada-blog {
+        display: flex;
+        justify-content: space-between;
+     }
  }
  .entrada-blog:last-of-type {
      margin-bottom: 0;
  }
- .entrada-blog .imagen {
-     flex-basis: 40%;
-
- }
-
- .entrada-blog .texto-entrada {
-     flex-basis: calc(60% - 3rem);
+ @media (min-width: 768px) {
+    .entrada-blog .imagen {
+        flex-basis: 40%;
+   
+    }
+   
+    .entrada-blog .texto-entrada {
+        flex-basis: calc(60% - 3rem);
+    }
  }
 
  .texto-entrada a {
@@ -315,10 +363,22 @@ h4{
 
 .contenedor-footer {
     padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
 }
-
+@media (min-width: 768px) {
+    .contenedor-footer {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.site-footer nav {
+    display: none;
+}
+@media (min-width: 768px) {
+    .site-footer nav{
+        display: block;
+    }
+}
 .copyright {
     margin: 0;
     color: #ffffff;
@@ -326,10 +386,12 @@ h4{
 
 /* INTERNAS */
 /* Nosotros */
-.contenido-nosotros {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
+@media (min-width: 768px) {
+    .contenido-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+    }
 }
 
 .texto-nosotros blockquote{
